# homebrew-hello

./: .gitignore  Cargo.toml  homebrew-guide.md
.github/workflows/: release.yml
Formula/: hello-brew.rb
src/: main.rs
